add docs delete
